[gd_scene load_steps=9 format=3 uid="uid://vmruxlc5vv03"]

[ext_resource type="Texture2D" uid="uid://buyvrmkgmcryd" path="res://Scenes/Menus/FinalBackground.png" id="1_ergjt"]
[ext_resource type="Script" path="res://Scenes/Menus/InfoTest.gd" id="1_ixsfg"]
[ext_resource type="Theme" uid="uid://yk36rhjn0d1b" path="res://Themes/MenuButtons.tres" id="2_1l6fo"]
[ext_resource type="FontFile" uid="uid://cf655hkwqrqyc" path="res://Assets/Font/PixelSerif_16px_v02.otf" id="3_gb7ek"]
[ext_resource type="Texture2D" uid="uid://cjpi6ntn20qv" path="res://Assets/GUI/FinalGUIAssets/Separator.png" id="4_6bq6l"]
[ext_resource type="Theme" uid="uid://dyxo8v2kpx5fn" path="res://Themes/InfoPanel.tres" id="6_dwlvj"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dilqe"]
texture = ExtResource("4_6bq6l")
region_rect = Rect2(915, 238, 80, 740)

[sub_resource type="Theme" id="Theme_i5x7q"]
PanelContainer/styles/panel = SubResource("StyleBoxTexture_dilqe")

[node name="InfoTest" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ixsfg")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_ergjt")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 80
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 80
theme_override_constants/margin_bottom = 80

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2

[node name="Separator3" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(757.5, 50)
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 15
theme_override_constants/shadow_offset_y = 15
theme_override_constants/outline_size = 24
theme_override_constants/shadow_outline_size = 0
theme_override_fonts/font = ExtResource("3_gb7ek")
theme_override_font_sizes/font_size = 122
text = "Info
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Separator2" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(501, 50)
layout_mode = 2

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
theme = ExtResource("2_1l6fo")
theme_override_fonts/font = ExtResource("3_gb7ek")
theme_override_font_sizes/font_size = 40
text = "Quit"

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_i5x7q")
alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer/HBoxContainer3/PanelContainer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
theme = ExtResource("6_dwlvj")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer3/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_gb7ek")
theme_override_font_sizes/font_size = 43
text = "This game is a multiplayer-only Bomberman adaptation,
 where player's must compete against each other using
 bombs and power-ups in order to become the last one
 standing. This task is made more difficult by different
 types of enemies roaming the battlefield, forcing the
 player to navigate the map with caution. 

The player is killed if they touch an enemy or get caught
 up in a bomb's explosion, including their own, requiring
 players to be conscious of their own bomb placement. 

You can group up with friends offline or online and
 explore the three challenging maps available, each
 introducing a new and unique environement."

[node name="HBoxContainer5" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Separator2" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer5"]
custom_minimum_size = Vector2(1488, 50)
layout_mode = 2

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer5"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
theme = ExtResource("2_1l6fo")
theme_override_fonts/font = ExtResource("3_gb7ek")
theme_override_font_sizes/font_size = 40
text = "Back"
